[gd_scene load_steps=3 format=3 uid="uid://b6x10rlcto2rn"]

[ext_resource type="Script" path="res://scripts/weapons/laser.gd" id="1_tj5e7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa7qx"]
resource_local_to_scene = true
size = Vector2(0, 0)

[node name="Laser" type="Node2D"]
script = ExtResource("1_tj5e7")

[node name="EndTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true
autostart = true

[node name="LaserArea" type="Area2D" parent="."]

[node name="LaserCollisionShape" type="CollisionShape2D" parent="LaserArea"]
shape = SubResource("RectangleShape2D_xa7qx")

[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
